@@ -75,17 +75,6 @@
       </component>
     </version>
   </module>
-  <module name="anjuta2">
-    <version release="gnome-2.2">
-      <component name="anjuta2" dir="anjuta2" group="developer-app">
-        <podir dir="po"/>
-        <potname name="anjuta2.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
-  </module>
   <module name="atk">
     <version release="gnome-2.2">
       <component name="atk" dir="atk" group="developer-libs">
