@@ -1,3 +1,7 @@
+2003-02-26  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>
+
+	* translation-status.xml: removed anjuta2 module. It's not mature enough.
+
 2003-02-26  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: evolution is *NOT* part of Fifth Toe.
